// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should contain target="_blank" when openNewTab is set true 1`] = `
<scale-link href="http://example.com" open-new-tab="true">
  <mock:shadow-root>
    <style>
      .link-0-0-10 {
  color: #000;
  cursor: pointer;
  display: inline-flex;
  outline: none;
  padding: 0;
  position: relative;
  font-size: 16px;
  transition: all .2s ease-in-out;
  align-items: center;
  font-weight: 500;
  --icon-color: #000;
  flex-direction: row;
  justify-content: flex-start;
  text-decoration: none;
}
.link-0-0-10 scale-icon {
  margin-left: 4px;
}
.link-0-0-10:hover.link-0-0-10:not(.link--disabled-0-0-12) {
  color: black;
  --icon-color: black;
}
.link--underline-0-0-11 {}
.link--underline-0-0-11:hover:not(.link--disabled-0-0-12) {
  text-decoration: underline;
}
.link--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.link--block-0-0-13 {
  display: flex;
}
.link--variant-primary-0-0-14 {
  color: #409eff;
  --icon-color: #409eff;
}
.link--variant-success-0-0-15 {
  color: #67c23a;
  --icon-color: #67c23a;
}
.link--variant-warning-0-0-16 {
  color: #e6a23c;
  --icon-color: #e6a23c;
}
.link--variant-danger-0-0-17 {
  color: #f56c6c;
  --icon-color: #f56c6c;
}
.link--variant-info-0-0-18 {
  color: #909399;
  --icon-color: #909399;
}
    </style>
    <a class="link--underline-0-0-11 link-0-0-10" href="http://example.com" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should have link href value when href value is set 1`] = `
<scale-link href="http://example.com">
  <mock:shadow-root>
    <style>
      .link-0-0-10 {
  color: #000;
  cursor: pointer;
  display: inline-flex;
  outline: none;
  padding: 0;
  position: relative;
  font-size: 16px;
  transition: all .2s ease-in-out;
  align-items: center;
  font-weight: 500;
  --icon-color: #000;
  flex-direction: row;
  justify-content: flex-start;
  text-decoration: none;
}
.link-0-0-10 scale-icon {
  margin-left: 4px;
}
.link-0-0-10:hover.link-0-0-10:not(.link--disabled-0-0-12) {
  color: black;
  --icon-color: black;
}
.link--underline-0-0-11 {}
.link--underline-0-0-11:hover:not(.link--disabled-0-0-12) {
  text-decoration: underline;
}
.link--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.link--block-0-0-13 {
  display: flex;
}
.link--variant-primary-0-0-14 {
  color: #409eff;
  --icon-color: #409eff;
}
.link--variant-success-0-0-15 {
  color: #67c23a;
  --icon-color: #67c23a;
}
.link--variant-warning-0-0-16 {
  color: #e6a23c;
  --icon-color: #e6a23c;
}
.link--variant-danger-0-0-17 {
  color: #f56c6c;
  --icon-color: #f56c6c;
}
.link--variant-info-0-0-18 {
  color: #909399;
  --icon-color: #909399;
}
    </style>
    <a class="link--underline-0-0-11 link-0-0-10" href="http://example.com" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should match snapshot 1`] = `
<scale-link>
  <mock:shadow-root>
    <style>
      .link-0-0-10 {
  color: #000;
  cursor: pointer;
  display: inline-flex;
  outline: none;
  padding: 0;
  position: relative;
  font-size: 16px;
  transition: all .2s ease-in-out;
  align-items: center;
  font-weight: 500;
  --icon-color: #000;
  flex-direction: row;
  justify-content: flex-start;
  text-decoration: none;
}
.link-0-0-10 scale-icon {
  margin-left: 4px;
}
.link-0-0-10:hover.link-0-0-10:not(.link--disabled-0-0-12) {
  color: black;
  --icon-color: black;
}
.link--underline-0-0-11 {}
.link--underline-0-0-11:hover:not(.link--disabled-0-0-12) {
  text-decoration: underline;
}
.link--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.link--block-0-0-13 {
  display: flex;
}
.link--variant-primary-0-0-14 {
  color: #409eff;
  --icon-color: #409eff;
}
.link--variant-success-0-0-15 {
  color: #67c23a;
  --icon-color: #67c23a;
}
.link--variant-warning-0-0-16 {
  color: #e6a23c;
  --icon-color: #e6a23c;
}
.link--variant-danger-0-0-17 {
  color: #f56c6c;
  --icon-color: #f56c6c;
}
.link--variant-info-0-0-18 {
  color: #909399;
  --icon-color: #909399;
}
    </style>
    <a class="link--underline-0-0-11 link-0-0-10" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  default
</scale-link>
`;
